--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <div align="center">
 
 <p><img src="undraw_programming_65t2.svg" /></p>
