Add screen size adaptation

--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<div align="center">
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        margin: 0;
+        padding: 0;
+        text-align: center;
+    }
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+    h2 {
+        margin-top: 20px;
+    }
+    p {
+        margin: 10px 0;
+    }
+</style>
 
-<p><img src="undraw_programming_65t2.svg" /></p>
-<h2 id="hi-there">Hi there 👋</h2>
-<p>I’m a developer</p>
-<p>I’m using a Real Me q2Pro device for development</p>
-<p>I’m about to turn 14! 🎂</p>
-<p>I’m FOSS 👊</p>
-<p>A child’s heart lives on! 🍩🍦</p>
+<div>
+    <p><img src="undraw_programming_65t2.svg" alt="Programming"></p>
+    <h2 id="hi-there">Hi there 👋</h2>
+    <p>I’m a developer</p>
+    <p>I’m using a Real Me q2Pro device for development</p>
+    <p>I’m about to turn 14! 🎂</p>
+    <p>I’m FOSS 👊</p>
+    <p>A child’s heart lives on! 🍩🍦</p>
+</div>
