--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         margin: 0;
         padding: 0;
         text-align: center;
+        background-color: #ffffff;
+        color: #000000;
     }
     img {
         max-width: 100%;
@@ -15,6 +17,12 @@
     }
     p {
         margin: 10px 0;
+    }
+    @media (prefers-color-scheme: dark) {
+        body {
+            background-color: #121212;
+            color: #ffffff;
+        }
     }
 </style>
 
